text alignment fix

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -185,6 +185,7 @@ ul li::before {
   flex-direction: column;
   align-items: center;
   text-decoration: none;
+  text-align: center;
 }
 
 .project-image {
